--- a/AssignmentOne/src/app/admin/admin.component.html
+++ b/AssignmentOne/src/app/admin/admin.component.html
@@ -1,3 +1,33 @@
 <h2>Admin Dashboard</h2>
-<p>Create User</p>
-<p id="demo"></p> 
+<h4>Create User</h4>
+<div id="createuserform">
+  <form (submit)="createUser();">
+    Username <input name="username" placeholder="Username.." [(ngModel)]='username'>
+    <br>
+    Email <input name="email" placeholder="Email.." [(ngModel)]='email'>
+    <br>
+    Role <select [(ngModel)]="role" name="role">
+      <option value="user">User</option>
+      <option value="groupAdmin">Group Admin</option>
+      <option value="superAdmin">Super Admin</option>
+    </select>
+    <br><br>
+    <button type="submit">Create</button>
+  </form>
+</div>
+
+<p id="demo"></p>
+
+<br>
+<h4>Delete User</h4>
+<form action="/">
+  <select name="users">
+    <!--ng forloop goes here-->
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat" selected>Fiat</option>
+    <option value="audi">Audi</option>
+  </select>
+  <br><br>
+  <button type="submit">Delete</button>
+</form>
