--- a/AssignmentOne/src/app/nav/nav.component.css
+++ b/AssignmentOne/src/app/nav/nav.component.css
@@ -16,7 +16,7 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: #ff9000;
     color: black;
 }
 
