--- a/AssignmentOne/src/styles.css
+++ b/AssignmentOne/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  background-color: #2c3e50;
+}
+h1, h2, h3, h4, p, label { color: white; }
