Fixed website breaking issues regarding res.success response & create user works 100% now. Also completed backend code for delete user.

--- a/AssignmentOne/src/app/admin/admin.component.html
+++ b/AssignmentOne/src/app/admin/admin.component.html
@@ -27,7 +27,7 @@
   <br>
   <div id="deleteUser">
     <h3>Delete User</h3>
-    <form action="/">
+    <form (submit)="deleteUser();">
       <!--ng forloop goes here-->
       <select name="users">
         <option value="volvo">Volvo</option>
