--- a/AssignmentOne/src/app/home/home.component.html
+++ b/AssignmentOne/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div id="login">
   <h2>Login</h2>
   <br>
-  <form (submit)="onSignin(); loggedOut = false">
+  <form (submit)="onSignin();">
   <input type="email" placeholder="Username" [(ngModel)]='username' name="username" id="username">
   <br>
   <input type="email" placeholder="Email" [(ngModel)]='email' name="email" id="email">
