Updated README.md, all user CRUD functions working. Began work on groups

--- a/AssignmentOne/src/app/admin/admin.component.css
+++ b/AssignmentOne/src/app/admin/admin.component.css
@@ -3,17 +3,26 @@
   display: inline-block;
   padding-top: 0px;
   padding: 5px;
-  width:45%;
+  width:20%;
 }
 
 #createUser {
   background-color: #5883ad;
   display: inline-block;
   padding: 10px;
+  margin:10px;
 }
 
 #deleteUser {
   background-color: #5883ad;
   display: inline-block;
   padding: 10px;
+  margin:10px;
+}
+
+#createGroup {
+  background-color: #5883ad;
+  display: inline-block;
+  padding: 10px;
+  margin:10px;
 }
