Final Assignment1 Commit

--- a/AssignmentOne/src/app/chat/chat.component.html
+++ b/AssignmentOne/src/app/chat/chat.component.html
@@ -12,7 +12,7 @@
     <form (submit)="sendMessage()">
       <input name="message" [(ngModel)]="message" placeholder="Type message here.." type="text" #newMessage>
       <div>
-        <button type="button">Send</button>
+        <button type="submit">Send</button>
       </div>
     </form>
   </div>
