--- a/AssignmentOne/src/app/admin/admin.component.css
+++ b/AssignmentOne/src/app/admin/admin.component.css
@@ -3,38 +3,78 @@
   display: inline-block;
   padding-top: 0px;
   padding: 5px;
-  width:20%;
+}
+
+#user {
+  display: table;
+}
+
+#group {
+  display: table;
 }
 
 #createUser {
   background-color: #5883ad;
-  display: inline-block;
   padding: 10px;
   margin:10px;
+  float: none;
+  display: table-cell;
+  vertical-align: top;
+}
+
+#addGroupUser {
+  background-color: #5883ad;
+  /*display: inline-block;*/
+  padding: 10px;
+  margin:10px;
+  float: none;
+  display: table-cell;
+  vertical-align: top;
+}
+
+.cellspace {
+  display: table-cell;
+  float: none;
+  vertical-align: top;
+  border-spacing: 10px;
+  border-collapse: separate;
+  background-color: #42617f;
+  margin: 10px;
+}
+
+.dummySpace {
+  visibility: hidden;
 }
 
 #deleteUser {
   background-color: #5883ad;
-  display: inline-block;
+  /*display: inline-block;*/
   padding: 10px;
   margin:10px;
+  float: none;
+  display: table-cell;
+  vertical-align: top;
 }
 
 #createGroup {
   background-color: #5883ad;
-  display: inline-block;
   padding: 10px;
   margin:10px;
+  float: none;
+  display: table-cell;
+  vertical-align: top;
 }
 
 #deleteGroup {
   background-color: #5883ad;
-  display: inline-block;
   padding: 10px;
   margin:10px;
+  float: none;
+  display: table-cell;
+  vertical-align: top;
 }
 
-.delete{
+.highlight{
   font-weight: bold;
   color: yellow;
 }
